Made some minor adjustments